# yeahbuddy

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/hevy/: client.py  schemas.py
backend/app/routers/: ai.py  exercises.py  routines.py  workouts.py
backend/app/services/: ai_service.py
backend/tests/: conftest.py  test_ai.py  test_hevy_client.py  test_routines.py  test_workouts.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  config.ts
frontend/src/api/: ai.ts  client.ts  routines.ts  workouts.ts
frontend/src/components/: Navbar.tsx  RoutineCard.tsx  SetTable.tsx  WorkoutCard.tsx
frontend/src/pages/: AiCoachPage.tsx  Dashboard.tsx  RoutineDetailPage.tsx  RoutinesPage.tsx  WorkoutDetailPage.tsx  WorkoutsPage.tsx
